--- a/src/main/resources/templates/accountList.html
+++ b/src/main/resources/templates/accountList.html
@@ -209,7 +209,7 @@
                     <div class="item-price fl" th:text="${account.money}">
                     </div>
                     <div class="buy fl">
-                        <a href="" th:onclick="accountDetail([[${account.accountId}]]);">
+                        <a href="javascript:void(0)" th:onclick="accountDetail([[${account.accountId}]]);">
                         <div class="buy-btn" >
                             立即租赁
                         </div>
