改了好多，注释随便打了

--- a/src/main/resources/templates/accountList.html
+++ b/src/main/resources/templates/accountList.html
@@ -183,7 +183,7 @@
             <ul class="item-list">
                 <li class="item-con" th:each="account:${accountList}">
                     <div class="item-img fl">
-                        <a href=""><img src="images/图层 67.png" alt=""></a>
+                        <a href="#"><img src="images/图层 67.png" alt="" th:src="@{/images/1.jpg}"></a>
                     </div>
                     <div class="item-tit fl">
                         <div class="item-tit-d">
