--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -42,9 +42,9 @@
 						</div>
 						<div class="img-sm">
 							<ul>
-								<li class="active"><img src="images/test.jpg" alt=""></li>
-								<li><img src="images/detail-img.jpg" alt=""></li>
-								<li><img src="images/tes.jpg" alt=""></li>
+								<li class="active"><img src="images/test.jpg" alt="" th:src="@{/images/1.jpg}"></li>
+								<li><img src="images/detail-img.jpg" alt="" th:src="@{/images/1.jpg}"></li>
+								<li><img src="images/tes.jpg" alt="" th:src="@{/images/1.jpg}"></li>
 							</ul>
 						</div>
 					</div>
