--- a/src/main/resources/templates/accountList.html
+++ b/src/main/resources/templates/accountList.html
@@ -206,17 +206,13 @@
                             </span>
                         </div>
                     </div>
-                    <div class="item-price fl" th:text="${account.money}">
-                    </div>
+                    <div class="item-price fl" th:text="${account.money}"></div>
                     <div class="buy fl">
                         <a href="javascript:void(0)" th:onclick="accountDetail([[${account.accountId}]]);">
                         <div class="buy-btn" >
                             立即租赁
                         </div>
                         </a>
-<!--                        <a href="">-->
-<!--                            -->
-<!--                        </a>-->
                     </div>
                 </li>
             </ul>
